# banorte-chatbot

./: README.md  pyproject.toml
agent-banorte-api/: .gitignore  README.md  docker-compose.yml  pyproject.toml
agent-banorte-api/src/: main.py
agent-banorte-api/src/core/settings/: base.py
agent-js-voice-time-real/: index.js
cron-chat/: pyproject.toml  test.sh
cron-chat/src/: main.py  test.py
cron-chat/src/core/settings/: base.py
cron-chat/src/shared/: embedings.py  firebase.py
src/: main.py
src/core/settings/: base.py
